feat(hub): the long and winding road to 1 + 1 = 2 (#748)
* fix: simplified SELFDESTRUCT handling

* feat(selfdestruct): managed part before transaction is completed

* feat(hub): done with exceptional, aborting, failure, emptyInit CREATE(s)

* fix(hub): regenerate Trace.java

* feat(hub): CREATE ready for testing and debuging

* ras

* test: add CREATE test

* feat(selfdestruct): managed will revert case

* feat(return): wip

* feat(return): implement mmu call invalid code prefix

* feat(selfdestruct): review and complete will revert case

* feat(selfdestruct): added comments

* ras

* clean stuff

* feat(selfdestruct): started implementing self destruct map

* feat(selfdestruct): rename components of the map

* feat(selfdestruct): implement resolvePostTransaction

* ras

* feat(return): progress but some TODO's

* delete the failure signals, delete romLex signals, triggers romLex for CREATE, seal sections for CN/CNnew

* merge arith-dev

* rm void file

* feat(selfdestruct): cleaned code

* fix resolve defers after triggering module at endTx

* fix: need to do two rounds of defersPostTx

* extcodecopy triggers RomLex

* feat(selfdestruct): fixed resolvePostTransaction

* fix(return): triggers ROMLEX

* fix(stuff): various

* spotless + clean

* feat(account fragment): implemented marked for selfdestruct

* fix(self destruct time): renaming

* fix(account fragment): fix account fragment resolve post transaction

* feat: implement the refund business

* feat(selfdestruct): added draft of contracts for testing

* fix(OOB:RDC): typo in StackArg

* typo

* feat(selfdestruct): fixed contracts for testing using 0.8.0+commit.c7dfd78e compiler version and VM London Environment

* fix(hub): return data + halting instruction fixes and refactoring

* getting rid as much as possible of one of the DomSubStampsFragment.standardDomSubStamps(...) methods

* fix(defers): ChildContextEntryDefers + other
